# postgresql-simple-migration

./: .gitignore  <  Changelog.markdown  Makefile  Readme.markdown  mkDocs.sh  postgresql-migration.cabal  postgresql-simple-migration.cabal
.github/workflows/: haskell-ci.yml
app/: Main.hs
share/test/: up_down.sql
src/: Main.hs
src/Database/PostgreSQL/Simple/: Migration.hs  UpAndDown.hs  Util.hs
src/Database/PostgreSQL/Simple/Migration/: V1Compat.hs
test/: Main.hs
test/Database/PostgreSQL/Simple/: MigrationTest.hs  MigrationTestV1Compat.hs  TransactionPerRunTest.hs  TransactionPerStepTest.hs  UpAndDownTest.hs
